# raglite-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pr-verify.yml  publish.yml
examples/: basic.py  custom_store_example.py  multi_provider.py  ollama_test.py  qdrant_example.py  sample.txt  serve.py
scripts/: pre-commit.sh  pre-release.sh
src/raglite/: __init__.py  cli.py  config.py  constants.py  errors.py  types.py
src/raglite/api/: __init__.py  schemas.py  server.py
src/raglite/chunking/: base.py  recursive.py
src/raglite/core/: document.py
src/raglite/embeddings/: __init__.py  base.py  factory.py  local.py  models.py  remote.py
src/raglite/llm/: __init__.py  answer.py  factory.py  models.py  prompt.py
src/raglite/loaders/: __init__.py  base.py  docx.py  json.py  markdown.py  pdf.py  txt.py
src/raglite/retrieval/: retriever.py
src/raglite/utils/: __init__.py  hash.py  logger.py
src/raglite/vectordb/: __init__.py  base.py  factory.py  memory.py  pinecone.py  qdrant.py
tests/: conftest.py
tests/integration/: test_api.py  test_ask.py  test_document.py  test_ollama.py
tests/unit/: test_chunking.py  test_cli.py  test_config.py  test_errors.py  test_hash.py  test_loaders.py  test_prompt.py  test_retriever.py  test_vectordb.py
