[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raglite"]


[project]
name = "raglite-toolkit"
version = "1.0.1"
description = "Build semantic search, multi-provider question answering, and REST APIs over your documents in a few lines of Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Piyush Anand" }
]
keywords = [
    "rag", "retrieval-augmented-generation", "llm", "embeddings",
    "semantic-search", "openai", "anthropic", "ollama", "vector-store"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "cohere>=5.0.0",
    "mistralai>=1.0.0",
    "voyageai>=0.1.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.25.0",
]

[project.urls]
"Homepage"    = "https://github.com/creatorpiyush/raglite-py"
"Repository"  = "https://github.com/creatorpiyush/raglite-py"
"Bug Tracker" = "https://github.com/creatorpiyush/raglite-py/issues"

[project.scripts]
raglite = "raglite.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.25.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "ollama: marks tests that require a live Ollama instance (deselect with '-m not ollama')",
]
